<resources>
    <string name="app_name">magpie</string>
    <string name="label_filters">Filters</string>
    <string name="label_effects">Effects</string>
    <string name="label_filter_invert">Invert (Caution)</string>
    <string name="label_filter_sepia">Sepia</string>
    <string name="cd_demo_image">Demo image</string>
    <string name="label_filter_none">None</string>
    <string name="label_filter_greyscale">Greyscale</string>
    <string name="label_filter_hue_rotate_90">Hue rotate 90°</string>
    <string name="label_effect_acrylic">Acrylic attempt</string>
    <string name="label_effect_pixelize">Pixelize</string>
    <string name="label_effect_gaussian_blur">Gaussian blur</string>
    <string name="label_effect_box_blur">Box blur</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_animations">Animations</string>
</resources>