<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ImageFilterDemoFragment">

    <ImageView
        android:id="@+id/demoImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/cd_demo_image"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@color/black" />

    <!-- TODO: RadioGroup is partially hidden for foldable devices (see: Layout Validation tool) -->
    <RadioGroup
        android:id="@+id/filterOptionsRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/demoImageView">

        <RadioButton
            android:id="@+id/filterNoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_filter_none" />

        <RadioButton
            android:id="@+id/filterGreyscaleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_filter_greyscale" />

        <RadioButton
            android:id="@+id/filterSepiaButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_filter_sepia" />

        <RadioButton
            android:id="@+id/filterHueRotate90Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_filter_hue_rotate_90" />

        <RadioButton
            android:id="@+id/filterInvertButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_filter_invert" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>